test/Fail/Issue5448-4-noK.err
Issue5448-4-noK.agda:8.1-15: error: [UnusableAtModality]
This clause has target type P x which is not usable at the required
modality @ω.
when checking that the pattern refl has type x ≡ y
